NCL-9208 - Add scheduled heartbeat executor